--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,9 +10,10 @@ events {
 
 
 http {
+    log_format postdata $request_body;
     server {
         listen 80;
-        underscores_in_headers on;        
+        underscores_in_headers on;
         return 301 https://$host$request_uri;
     }
 
@@ -22,7 +23,7 @@ http {
         listen 443;
         server_name www.example.com;
 
-        access_log /proc/self/fd/1;
+        #access_log /proc/self/fd/1;
         error_log /proc/self/fd/2;
 
         ssl_certificate           /etc/nginx/certs/server.crt;
@@ -73,6 +74,8 @@ http {
             proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header        X-Forwarded-Proto $scheme;
             proxy_pass              http://meshblu;
+
+            access_log /proc/self/fd/1 postdata;
             proxy_redirect http:// https://;
         }
     }
