--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,7 +23,7 @@ http {
         listen 443;
         server_name www.example.com;
 
-        #access_log /proc/self/fd/1;
+        access_log /proc/self/fd/1;
         error_log /proc/self/fd/2;
 
         ssl_certificate           /etc/nginx/certs/server.crt;
@@ -34,38 +34,36 @@ http {
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers "ECDHE+RSAGCM:ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:!EXPORT:!DES:!3DES:!MD5:!DSS";
 
-#        location /idcf/uuid {
-#            #set_by_lua_file $res '/etc/nginx/lua/calc.lua';
-#            #return 200 $res;
-#
-#            default_type text/html;
-#
-#            content_by_lua '
-#                local cjson = require "cjson"
-#                local redis = require "resty.redis"
-#                local red = redis:new()
-#                local args = ngx.req.get_uri_args()
-#
-#                local ok, err = red:connect(os.getenv("REDIS_PORT_6379_TCP_ADDR"), tonumber(os.getenv("REDIS_PORT_6379_TCP_PORT")))
-#                
-#                if not ok then
-#                    ngx.say("failed to connect: ", err)
-#                    return
-#                end
-#
-#                local res, err = red:get(args.token .. ":" .. args.keyword)
-#
-#                if not res then
-#                    ngx.say("failed to get uuid: ", err)
-#                    return
-#                end
-#
-#                ngx.header.content_type = "application/json; charset=utf-8"
-#                ngx.say(cjson.encode({uuid = res}))
-#
-#                red:close()
-#            ';
-#        }
+        location /owner/uuid {
+            default_type text/html;
+            content_by_lua '
+                local cjson = require "cjson"
+                local redis = require "resty.redis"
+                local red = redis:new()
+                local args = ngx.req.get_uri_args()
+
+                local ok, err = red:connect(os.getenv("REDIS_PORT_6379_TCP_ADDR"), tonumber(os.getenv("REDIS_PORT_6379_TCP_PORT")))
+
+
+                if not ok then
+                    ngx.say("failed to connect: ", err)
+                    return
+                end
+
+                local uuid_key = args.keyword .. ":" ..args.token
+                local res, err = red:get(uuid_key)
+
+                if not res then
+                    ngx.say("failed to get uuid: ", err)
+                    return
+                end
+
+                ngx.header.content_type = "application/json; charset=utf-8"
+                ngx.say(cjson.encode({uuid = res}))
+
+                red:close()
+            ';
+        }
 
         location / {
             proxy_set_header        Host $host;
