--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
 
         underscores_in_headers on;
         listen 443;
-        server_name www.example.com;
+        server_name localhost;
 
         access_log /proc/self/fd/1;
         error_log /proc/self/fd/2;
@@ -34,6 +34,39 @@ http {
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers "ECDHE+RSAGCM:ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:!EXPORT:!DES:!3DES:!MD5:!DSS";
 
+
+        location ~ /data/(trigger\-\\d)$ {
+            content_by_lua '
+                local redis = require "resty.redis"
+                local red = redis:new()
+
+                local ok, err = red:connect(os.getenv("REDIS_PORT_6379_TCP_ADDR"), tonumber(os.getenv("REDIS_PORT_6379_TCP_PORT")))
+
+                if not ok then
+                    ngx.say("failed to connect: ", err)
+                    return
+                end
+
+                local m,err = ngx.re.match(ngx.var.uri,"(trigger-\\\\d)")
+                if not m then 
+                    ngx.say("not matched!")
+                    return
+                end
+
+                local uuid_key = m[0]
+                local res, err = red:hmget(uuid_key,"uuid")
+                ngx.say(res)
+
+                if not res then
+                    ngx.say("failed to get uuid: ", err)
+                    return
+                end
+
+                red:close()
+                return
+           ';
+        }
+
         location /owner/uuid {
             default_type text/html;
             content_by_lua '
@@ -44,22 +77,22 @@ http {
 
                 local ok, err = red:connect(os.getenv("REDIS_PORT_6379_TCP_ADDR"), tonumber(os.getenv("REDIS_PORT_6379_TCP_PORT")))
 
-
                 if not ok then
                     ngx.say("failed to connect: ", err)
                     return
                 end
 
                 local uuid_key = args.keyword .. ":" ..args.token
-                local res, err = red:get(uuid_key)
+                local res, err = red:hmget(uuid_key,"uuid")
 
+                ngx.say(unpack(res))
                 if not res then
                     ngx.say("failed to get uuid: ", err)
                     return
                 end
 
                 ngx.header.content_type = "application/json; charset=utf-8"
-                ngx.say(cjson.encode({uuid = res}))
+                ngx.say(cjson.encode({uuid = unpack(res)}))
 
                 red:close()
             ';
