--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,8 @@ openresty:
     - "80:80"
     - "443:443"
   volumes:
-    - ./nginx:/etc/nginx
+    - ./nginx/conf:/etc/nginx
+    - ./nginx/lua:/usr/local/openresty/nginx/lua
   links:
     - redis
     - meshblu
