--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -14,6 +14,7 @@ http {
     server {
         listen 80;
         underscores_in_headers on;
+        access_log /proc/self/fd/1;
         return 301 https://$host$request_uri;
     }
 
