--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -4,6 +4,8 @@ worker_processes  1;
 env REDIS_PORT_6379_TCP_ADDR;
 env REDIS_PORT_6379_TCP_PORT;
 
+error_log /proc/self/fd/2;
+
 events {
     worker_connections  256;
 }
@@ -13,9 +15,22 @@ http {
     log_format postdata $request_body;
     server {
         listen 80;
+        server_name localhost;
         underscores_in_headers on;
-        access_log /proc/self/fd/1;
-        return 301 https://$host$request_uri;
+#        return 301 https://$host$request_uri;
+
+        location / {
+            proxy_set_header        Host $host;
+            proxy_set_header        X-Real-IP $remote_addr;
+            proxy_set_header        X-Forwarded-Host $host;
+            proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header        X-Forwarded-Proto $scheme;
+            proxy_pass              http://meshblu;
+
+            access_log /proc/self/fd/1 postdata;
+            proxy_redirect http:// https://;
+        }
+
     }
 
     lua_package_path "$prefix/lua/?.lua;;";
@@ -26,9 +41,6 @@ http {
         underscores_in_headers on;
         listen 443;
         server_name localhost;
-
-        access_log /proc/self/fd/1;
-        error_log /proc/self/fd/2;
 
         ssl_certificate        /etc/nginx/certs/server.crt;
         ssl_certificate_key    /etc/nginx/certs/server.key;
@@ -66,7 +78,6 @@ http {
             proxy_pass              http://meshblu;
 
             access_log /proc/self/fd/1 postdata;
-            proxy_redirect http:// https://;
         }
     }
 }
