--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -27,6 +27,10 @@ http {
             proxy_set_header        X-Forwarded-Proto $scheme;
             proxy_pass              http://meshblu;
 
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+
             access_log /proc/self/fd/1 postdata;
             proxy_redirect http:// https://;
         }
@@ -76,6 +80,10 @@ http {
             proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header        X-Forwarded-Proto $scheme;
             proxy_pass              http://meshblu;
+
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
 
             access_log /proc/self/fd/1 postdata;
         }
