--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "iotutil"]
 	path = iotutil
 	url = git@github.com:masato/node-iot-util.git
+[submodule "meshblu"]
+	path = meshblu
+	url = https://github.com/octoblu/meshblu.git
