--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -37,7 +37,7 @@ http {
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers "ECDHE+RSAGCM:ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:!EXPORT:!DES:!3DES:!MD5:!DSS";
 
-        location ~ /(data|devices)/(trigger\-\\d)$ {
+        location ~ /(data|devices)/((action|trigger)\-\\d)$ {
             set $device_uri "";
             access_by_lua_file lua/devices.lua;
             proxy_set_header        Host $host;
