--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ meshblu:
   volumes:
     - ./meshblu:/var/www
     - ./docker:/etc/supervisor/conf.d
+    - /etc/localtime:/etc/localtime:ro
   environment:
     - DEBUG=meshblu:model:device,meshblu:register,meshblu:mqtt
     - MQTT_PORT=1883
@@ -26,6 +27,7 @@ openresty:
   volumes:
     - ./nginx/conf:/etc/nginx
     - ./nginx/lua:/usr/local/openresty/nginx/lua
+    - /etc/localtime:/etc/localtime:ro
   links:
     - redis
     - meshblu
@@ -35,6 +37,7 @@ redis:
   image: redis
   volumes:
     - ./redis:/data
+    - /etc/localtime:/etc/localtime:ro
 mongo:
   restart: always
   image: mongo
@@ -44,6 +47,7 @@ iotutil:
   build: ./iotutil
   volumes:
     - ./iotutil:/app
+    - /etc/localtime:/etc/localtime:ro
   links:
     - redis
     - openresty
