--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -37,23 +37,28 @@ http {
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers "ECDHE+RSAGCM:ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:!EXPORT:!DES:!3DES:!MD5:!DSS";
 
-        location ~ /(data|devices)/((action|trigger)\-\\d)$ {
-            set $device_uri "";
-            access_by_lua_file lua/devices.lua;
-            proxy_set_header        Host $host;
-            proxy_set_header        X-Real-IP $remote_addr;
-            proxy_set_header        X-Forwarded-Host $host;
-            proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header        X-Forwarded-Proto $scheme;
-            proxy_pass              http://meshblu$device_uri;
+        #location ~ /(data|devices)/((action|trigger)\-\\d)$ {
+        #    set $device_uri "";
+        #    access_by_lua_file lua/devices.lua;
+        #    proxy_set_header        Host $host;
+        #    proxy_set_header        X-Real-IP $remote_addr;
+        #    proxy_set_header        X-Forwarded-Host $host;
+        #    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        #    proxy_set_header        X-Forwarded-Proto $scheme;
+        #    proxy_pass              http://meshblu$device_uri;
+        #
+        #    access_log /proc/self/fd/1 postdata;
+        #    proxy_redirect http:// https://;
+        #}
 
-            access_log /proc/self/fd/1 postdata;
-            proxy_redirect http:// https://;
+        location  /owner/uuid {
+            default_type text/html;
+            content_by_lua_file lua/owner_status.lua;
         }
 
-        location /owner/uuid {
+        location  /device/uuid {
             default_type text/html;
-            content_by_lua_file lua/status.lua;
+            content_by_lua_file lua/device_status.lua;
         }
 
         location / {
