redis-cli service in compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,10 @@ mongo:
   image: mongo
   volumes:
     - ./mongo:/data/db
+rediscli:
+  image: redis
+  links:
+    - redis
 iotutil:
   build: ./iotutil
   volumes:
