docker-compose 1.3.1 bump

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,5 +55,6 @@ iotutil:
   links:
     - redis
     - openresty
+#  entrypoint: ["npm","test"]
   environment: 
     - MESHBLU_URL=https://openresty/
