ascoltatore debug log

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ meshblu:
     - ./docker:/etc/supervisor/conf.d
     - /etc/localtime:/etc/localtime:ro
   environment:
-    - DEBUG=meshblu:model:device,meshblu:register,meshblu:mqtt
+#    - DEBUG=meshblu:model:device,meshblu:register,meshblu:mqtt,ascoltatori:redis
+    - DEBUG=meshblu:mqtt,ascoltatori:redis
     - MQTT_PORT=1883
     - MQTT_PASSWORD=skynetpass
     - MONGODB_URI=mongodb://mongo:27017/skynet
