--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "iotutil"]
 	path = iotutil
-	url = git@github.com:IDCFChannel/node-iot-util.git
+	url = https://github.com/IDCFChannel/node-iot-util
 [submodule "meshblu"]
 	path = meshblu
 	url = https://github.com/octoblu/meshblu.git
