--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -17,8 +17,28 @@ http {
         listen 80;
         server_name localhost;
         underscores_in_headers on;
-        return 301 https://$host$request_uri;
+        location / {
+            proxy_set_header        Host $host;
+            proxy_set_header        X-Real-IP $remote_addr;
+            proxy_set_header        X-Forwarded-Host $host;
+            proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header        X-Forwarded-Proto $scheme;
+            proxy_pass              http://meshblu;
+
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+
+            access_log /proc/self/fd/1;
+        }
     }
+
+#    server {
+#        listen 80;
+#        server_name localhost;
+#        underscores_in_headers on;
+#        return 301 https://$host$request_uri;
+#    }
 
     lua_package_path "$prefix/lua/?.lua;;";
     lua_code_cache off; #only for development
