--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -79,7 +79,7 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
 
-#            access_log /proc/self/fd/1; postdata;
+#            access_log /proc/self/fd/1 postdata;
             access_log /proc/self/fd/1;
         }
     }
