--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 nginx/conf/certs/server.*
 mongo
 redis
+bme280/config.py
 
 # Logs
 logs
@@ -29,5 +30,3 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
-
-
