--- a/manage/Dockerfile
+++ b/manage/Dockerfile
@@ -4,14 +4,14 @@ MAINTAINER Masato Shimizu <ma6ato@gmail.com>
 RUN mkdir -p /app
 WORKDIR /app
 
-#COPY package.json /app/
-#COPY bower.json /app/
-#COPY gulpfile.js /app/
-#COPY config.js /app/
+COPY package.json /app/
+COPY bower.json /app/
+COPY gulpfile.js /app/
+
+RUN npm install
+RUN ./node_modules/bower/bin/bower install --allow-root
 
 COPY . /app
-RUN npm install && \
-    ./node_modules/bower/bin/bower install --allow-root && \
-    npm run build
+RUN npm run build
 
 CMD ["npm","start"]
