--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ meshblu:
   volumes:
     - ./meshblu:/var/www
     - ./docker:/etc/supervisor/conf.d
-#    - /etc/localtime:/etc/localtime:ro
+    - /etc/localtime:/etc/localtime:ro
   environment:
 #    - DEBUG=meshblu:mqtt,ascoltatori:redis,ascoltatori:mqtt,meshblu:sendMessage,meshblu:doMessageForward,meshblu:message-io-socket-handler,meshblu:createMessageIOEmitter,meshblu:MessageIOClient,meshblu:protocol:socketLogic
     - MONGODB_URI=mongodb://mongo:27017/skynet
@@ -26,7 +26,7 @@ openresty:
   volumes:
     - ./nginx/conf:/etc/nginx
     - ./nginx/lua:/usr/local/openresty/nginx/lua
-#    - /etc/localtime:/etc/localtime:ro
+    - /etc/localtime:/etc/localtime:ro
   links:
     - redis
     - meshblu
@@ -36,7 +36,7 @@ redis:
   image: redis
   volumes:
     - ./redis:/data
-#    - /etc/localtime:/etc/localtime:ro
+    - /etc/localtime:/etc/localtime:ro
 mongo:
   restart: always
   image: mongo
@@ -49,8 +49,8 @@ rediscli:
     - redis
 iotutil:
   image: idcfchannel/iotutil
-#  volumes:
-#    - /etc/localtime:/etc/localtime:ro
+  volumes:
+    - /etc/localtime:/etc/localtime:ro
   links:
     - redis
     - openresty
@@ -60,21 +60,21 @@ iotutil:
   entrypoint: ["npm", "start"]
 freeboard:
   build: ./freeboard
-#  volumes:
-#    - /etc/localtime:/etc/localtime:ro
+  volumes:
+    - /etc/localtime:/etc/localtime:ro
   ports:
     - 8088:8080
 bme280:
   build: ./bme280
-#  volumes:
-#    - /etc/localtime:/etc/localtime:ro
+  volumes:
+    - /etc/localtime:/etc/localtime:ro
 sensortag:
   build: ./sensortag
-#  volumes:
-#    - /etc/localtime:/etc/localtime:ro
+  volumes:
+    - /etc/localtime:/etc/localtime:ro
 manage:
   build: ./manage
-#  volumes:
-#    - /etc/localtime:/etc/localtime:ro
+  volumes:
+    - /etc/localtime:/etc/localtime:ro
   ports:
     - "3030:3000"
